[tool.poetry]
name = "dbt-core-introduction"
version = "0.2.0"
description = ""
authors = ["Gutto <guttolaudie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.8.5"
psycopg2-binary = "^2.9.9"
dbt-postgres = "^1.8.2"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
ruff = "^0.5.7"
taskipy = "^1.13.0"
mypy = "^1.11.1"


[tool.poetry.group.doc.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.31"
mkdocstrings = "^0.25.2"
mkdocstrings-python = "^1.10.8"
mkdocs-mermaid2-plugin = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = """
ruff chec --select I --fix .
ruff format .
"""
kill = "kill -9 $(lsof -t -i :8000)"
test = "pytest -v"
run = """
python3 app/main.py
"""
doc = "mkdocs serve"
